# moses

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Gemfile  README.md  TODO.md  analog-inputs-blank.c  loop-runner  nut-notify  watch-and-control.rb
.github/workflows/: build.yml
scripts/: loop-runner
src/: breaker.c  breaker_state.c  breaker_state.h  common.c  common.h  integration.h  lv_conf.h  main.c  sensors.c  watermeter.c
src/integration/: rpi-automation-hat-mini.c
test/: test_breaker_state.c  test_parsers.c
watch-and-control/: breaker.rb  meter.rb
